--- a/postalCodeApp/postalCodeApp/MainWindow.xaml
+++ b/postalCodeApp/postalCodeApp/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Label x:Name="titleLable" Content="watherDisplay" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="34" Width="780" FontSize="16"/>
+        <Label x:Name="postalCodeLable" Content="郵便番号" HorizontalAlignment="Left" Margin="10,49,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="postalCode" HorizontalAlignment="Left" Margin="10,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Height="23" BorderBrush="#FFABADB3"/>
+        <Button x:Name="searchbtn" Content="住所検索" HorizontalAlignment="Left" Margin="173,80,0,0" VerticalAlignment="Top" Click="searchbtn_Click"/>
+        <DataGrid x:Name="postalCodeGrid" Margin="0,122,0,0" CanUserAddRows="False" />
 
     </Grid>
 </Window>
